--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,8 @@
 @tailwind utilities;
 
 
+.active {
+    background-color: #ff00d3 !important;
+    font-weight: 600 !important;
+    color: white !important;
+}
