--- a/src/index.css
+++ b/src/index.css
@@ -30,9 +30,10 @@
 .navLinknavLink:active,
 .navLink:focus,
 .navLink:focus-visible,
-.navLink:focus-within {
+.navLink:focus-within,
+.navLink:hover {
   background-color: transparent !important;
-  color: #ef00d3 !important;
+  color: #ff00d3 !important;
 }
 .navLink {
   position: relative;
@@ -49,7 +50,7 @@
   bottom: 0;
   width: 100%;
   height: 2px;
-  background-color: #ef00d3;
+  background-color: #ff00d3;
   transform: scaleX(0);
   transform-origin: bottom right;
   transition: transform 0.3s ease;
@@ -75,7 +76,7 @@
   bottom: 0;
   width: 100%;
   height: 2px;
-  background-color: #ef00d3 !important;
+  background-color: #ff00d3 !important;
   transform: scaleX(1); /* Always visible */
   transform-origin: bottom left;
   transition: none; /* No animation */
